<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="calibre_library_category"
        android:title="@string/settings_calibre_library_category">

        <Preference
            android:key="calibre_content_server_category"
            android:title="@string/settings_calibre_content_server_category"
            android:selectable="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="calibre_content_server_enabled"
            android:title="@string/settings_calibre_content_server_enabled"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="calibre_content_server_url"
            android:title="@string/settings_calibre_content_server_url"
            android:dialogTitle="@string/settings_calibre_content_server_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="calibre_content_server_username"
            android:title="@string/settings_calibre_content_server_username"
            android:dialogTitle="@string/settings_calibre_content_server_username"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="calibre_content_server_password"
            android:title="@string/settings_calibre_content_server_password"
            android:dialogTitle="@string/settings_calibre_content_server_password" />

        <Preference
            android:key="calibre_test_connection"
            android:title="@string/settings_calibre_test_connection" />


        <Preference
            android:key="calibre_web_category"
            android:title="@string/settings_calibre_web_category"
            android:selectable="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="calibre_web_enabled"
            android:title="@string/settings_calibre_web_enabled"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="calibre_web_url"
            android:title="@string/settings_calibre_web_url"
            android:dialogTitle="@string/settings_calibre_web_url"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="calibre_download_directory"
            android:title="@string/settings_calibre_download_directory" />

        <ListPreference
            android:key="calibre_preferred_format"
            android:title="@string/settings_calibre_preferred_format"
            android:defaultValue="ANY"
            app:entries="@array/calibre_preferred_format_entries"
            app:entryValues="@array/calibre_preferred_format_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="reader_layout_pagination_category"
        android:title="@string/reader_layout_pagination_section">

        <ListPreference
            android:key="reader_text_size"
            android:title="@string/settings_reader_text_size"
            android:defaultValue="16"
            app:entries="@array/reader_text_size_entries"
            app:entryValues="@array/reader_text_size_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="reader_line_height"
            android:title="@string/settings_reader_line_height"
            android:defaultValue="1.3"
            app:entries="@array/reader_line_height_entries"
            app:entryValues="@array/reader_line_height_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="reader_font_family"
            android:title="@string/settings_reader_font_family"
            android:defaultValue="sans-serif"
            app:entries="@array/font_family_entries"
            app:entryValues="@array/font_family_values"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:key="reader_page_padding_dp"
            android:title="@string/settings_reader_page_padding"
            android:defaultValue="16"
            app:min="0"
            android:max="48"
            app:showSeekBarValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="reader_keep_screen_on"
            android:title="@string/settings_reader_keep_screen_on"
            android:defaultValue="false" />

        <SeekBarPreference
            android:key="reader_brightness_percent"
            android:title="@string/settings_reader_brightness"
            android:summary="@string/settings_reader_brightness_summary"
            android:defaultValue="0"
            app:min="0"
            android:max="100"
            app:showSeekBarValue="true" />

        <ListPreference
            android:key="reader_theme"
            android:title="@string/settings_reader_theme"
            android:defaultValue="LIGHT"
            app:entries="@array/reader_theme_entries"
            app:entryValues="@array/reader_theme_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="reader_mode"
            android:title="@string/settings_reader_mode"
            android:defaultValue="PAGINATED"
            app:entries="@array/reader_mode_entries"
            app:entryValues="@array/reader_mode_values"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="reader_continuous_streaming"
            android:title="@string/settings_reader_continuous_streaming_title"
            android:summary="@string/settings_reader_continuous_streaming_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="reader_chapter_visibility_category"
        android:title="@string/settings_reader_chapter_visibility_category">

        <androidx.preference.SwitchPreferenceCompat
            android:key="reader_include_cover"
            android:title="@string/settings_reader_include_cover_title"
            android:summary="@string/settings_reader_include_cover_summary"
            android:defaultValue="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="reader_include_front_matter"
            android:title="@string/settings_reader_include_front_matter_title"
            android:summary="@string/settings_reader_include_front_matter_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="reader_include_non_linear"
            android:title="@string/settings_reader_include_non_linear_title"
            android:summary="@string/settings_reader_include_non_linear_summary"
            android:defaultValue="false" />

        <Preference
            android:key="reader_reset_visibility"
            android:title="@string/settings_reader_reset_visibility_title"
            android:summary="@string/settings_reader_reset_visibility_summary" />

    </PreferenceCategory>

</PreferenceScreen>
