<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reader_save_bookmark"
        android:icon="@drawable/ic_bookmark_border_24"
        android:title="@string/reader_save_bookmark"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reader_bookmarks"
        android:icon="@drawable/ic_bookmark_24"
        android:title="@string/reader_bookmarks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reader_chapters"
        android:icon="@drawable/ic_chapters_24"
        android:title="@string/reader_toc"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_reader_tap_zones"
        android:icon="@drawable/ic_tap_zone_24"
        android:title="@string/reader_tap_zones"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reader_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/reader_text_settings"
        app:showAsAction="always" />

    <!-- Temporary debug button for conveyor system -->
    <item
        android:id="@+id/debug_conveyor"
        android:title="Debug Conveyor"
        app:showAsAction="never" />
</menu>
