<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit_metadata"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/library_metadata_edit_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_set_cover"
        android:icon="@drawable/ic_add_24"
        android:title="@string/library_cover_set_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_remove_cover"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/library_cover_remove_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_check_box_24"
        android:title="@string/library_selection_select_all"
        app:showAsAction="ifRoom" />
</menu>
